@@ -1,3 +1,8 @@
+2008-03-29  Badlop  <badlop@process-one.net>
+
+	* src/mod_muc_admin.erl: Improvements in the list of rooms of web
+	admin: show timestamp of last message, sorting by any column.
+
 2008-03-19  Badlop  <badlop@process-one.net>
 
 	* src/mod_muc_admin.erl (join): Copied the new function
